
2007-06-29  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, bin/po-register: Stop making symlinks in packages/.

	* registry/registry.sgml: Whitespace adjustments after removal of
	nano_1_0 assignments.

2007-06-28  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/layout.html.in: Tell webspiders they are welcome now
	that the site is going live.

	* lib/config.py, webgen/layout.html.in: Change the colour of the
	website title banner, to clearly mark the site switch.

	* bin/tp-robot, lib/config.py, webgen/maintainers.all,
	webgen/translators.all, webgen/leaders.all, README:
	Remove the unneeded "www."; it makes for cleaner URLs.

	* bin/po-register: Add the path for 'calc-postats' to PATH,
	so it can be found also when being run by cron.

	* bin/create-mail-aliases: Use many short lines, not one long one.

	* bin/po-register: Fix path to 'calc-postats' correctly this time,
	and use the team leaders address at tp.org instead of umontreal.ca.

	* bin/create-mail-aliases: Don't make procmail rules for maintainers
	who have <nomailto> set.

	* registry/registry.sgml: Update URL for xkeyboard-config.

	* registry/registry.sgml: Remove the nano_1_0 maintainance branch.

	* lib/localweb.py: Use globbing instead of directory walking when
	generating a domain page; no need for a packages/ dir any more.

	* registry/registry.sgml: Really remove the nano_1_0 branch.

	* bin/make-package-links.sh: Move the script to the tools/ directory,
	since it is unneeded, was a bad idea, and is imperfectly executed.

2007-06-27  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/create-mail-aliases: Comment out the extra alias for
	team-leaders for now; something is going wrong in procmail.

	* webgen/changes.all, webgen/software.all: Textual tweaks.

	* bin/create-mail-aliases: Make team-leaders rule less restrictive.

	* webgen/changes.all, webgen/layout.html.in, webgen/files.all:
	Textual tweaks and additions.

	* webgen/files.all: Further tweaks and margin adjustments.
